--- a/src/WxrNet/project.json
+++ b/src/WxrNet/project.json
@@ -12,7 +12,7 @@
                 "System.Xml.Linq": ""
             }
         },
-        "netcoreapp1.1": {
+        "netstandard1.0": {
             "dependencies": {
                 "System.Runtime": "4.3.0",
                 "System.Xml.XmlSerializer": "4.3.0",
