--- a/src/WxrNet/project.json
+++ b/src/WxrNet/project.json
@@ -1,9 +1,25 @@
 {
     "version": "1.0.0-*",
+    "description": ".NET Disqus migrator for custom XML import format based on the WXR (WordPress eXtended RSS) schema",
+    "packOptions": {
+        "summary": ".NET Disqus migrator for custom XML import format based on the WXR (WordPress eXtended RSS) schema. This is useful for sites importing comments to Disqus in an unsupported format.",
+        "licenseUrl": "https://github.com/tugberkugurlu/WxrNet/blob/master/LICENSE",
+        "requireLicenseAcceptance": false,
+        "owners": [
+            "Tugberk Ugurlu"
+        ],
+        "tags": [
+            "disqus",
+            "wxr",
+            "wordpress"
+        ],
+        "repository": {
+            "type": "git",
+            "url": "git@github.com:tugberkugurlu/WxrNet.git"
+        }
+    },
     "buildOptions": {
         "debugType": "portable"
-    },
-    "dependencies": {
     },
     "frameworks": {
         "net45": {
